# nodegui-plugin-svg

./: CMakeLists.txt  README.md  install.js  package.json  publish.sh
config/: qtsvg.cmake
src/: demo.ts  index.ts
src/cpp/: main.cpp
src/cpp/QSvgWidget/: nsvgwidget.hpp  qsvgwidget_wrap.cpp  qsvgwidget_wrap.h
src/lib/QSvgWidget/: index.ts
src/lib/utils/: addon.ts
src/react/: index.ts
src/react/components/Svg/: RNSvg.ts  index.ts
